Update to newly generated generated version of API with TypeSpec.
