# controllers/Builds.js
@@ -3,8 +3,8 @@
 const utils = require('../utils/writer.js');
 const Builds = require('../service/BuildsService');
 
-module.exports.buildsArtifactGET = async function buildsArtifactGET (req, res, next, artifact) {
-	Builds.buildsArtifactGET(artifact)
+module.exports.buildsArtifactGet = async function buildsArtifactGet (req, res, next, artifact) {
+	Builds.buildsArtifactGet(artifact)
 		.then(function (response) {
 			utils.writeResponse(res, response.response, response.code, response.contentType, response.headers);
 		})
@@ -13,8 +13,8 @@ module.exports.buildsArtifactGET = async function buildsArtifactGET (req, res, n
 		});
 };
 
-module.exports.buildsArtifactIdGET = async function buildsArtifactIdGET (req, res, next, artifact, id) {
-	Builds.buildsArtifactIdGET(artifact, id)
+module.exports.buildsArtifactIdGet = async function buildsArtifactIdGet (req, res, next, artifact, id) {
+	Builds.buildsArtifactIdGet(artifact, id)
 		.then(function (response) {
 			utils.writeResponse(res, response.response, response.code, response.contentType, response.headers);
 		})
@@ -23,8 +23,8 @@ module.exports.buildsArtifactIdGET = async function buildsArtifactIdGET (req, re
 		});
 };
 
-module.exports.buildsGET = async function buildsGET (req, res, next) {
-	Builds.buildsGET()
+module.exports.buildsGet = async function buildsGet (req, res, next) {
+	Builds.buildsGet()
 		.then(function (response) {
 			utils.writeResponse(res, response.response, response.code, response.contentType, response.headers);
 		})
